--- a/Experiment.ipynb
+++ b/Experiment.ipynb
@@ -2,9 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Response variable has not been defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "File \u001B[1;32mD:\\School\\CSCI347\\Projects\\CSCI347FinalProject\\utilities\\Preprocessor.py:29\u001B[0m, in \u001B[0;36mPreprocessor.drop_na\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m     28\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m---> 29\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mresponse \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mresponse\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m~\u001B[39;49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdata\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43misna\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43many\u001B[49m\u001B[43m(\u001B[49m\u001B[43maxis\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m]\u001B[49m\n\u001B[0;32m     30\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mTypeError\u001B[39;00m:\n",
+      "\u001B[1;31mTypeError\u001B[0m: 'NoneType' object is not subscriptable",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 13\u001B[0m\n\u001B[0;32m     10\u001B[0m pp\u001B[38;5;241m.\u001B[39mdrop_columns(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mpatient_id\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     12\u001B[0m \u001B[38;5;66;03m# Remove any rows with missing samples\u001B[39;00m\n\u001B[1;32m---> 13\u001B[0m \u001B[43mpp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdrop_na\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     15\u001B[0m \u001B[38;5;66;03m# Standard normalize the data\u001B[39;00m\n\u001B[0;32m     16\u001B[0m pp\u001B[38;5;241m.\u001B[39mnormalize()\n",
+      "File \u001B[1;32mD:\\School\\CSCI347\\Projects\\CSCI347FinalProject\\utilities\\Preprocessor.py:31\u001B[0m, in \u001B[0;36mPreprocessor.drop_na\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m     29\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mresponse \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mresponse[\u001B[38;5;241m~\u001B[39m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata\u001B[38;5;241m.\u001B[39misna()\u001B[38;5;241m.\u001B[39many(axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)]\n\u001B[0;32m     30\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mTypeError\u001B[39;00m:\n\u001B[1;32m---> 31\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mResponse variable has not been defined\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     33\u001B[0m \u001B[38;5;66;03m# Drop rows that are missing values\u001B[39;00m\n\u001B[0;32m     34\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata\u001B[38;5;241m.\u001B[39mdropna(axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m)\n",
+      "\u001B[1;31mValueError\u001B[0m: Response variable has not been defined"
+     ]
+    }
+   ],
+   "source": [
+    "from utilities.Preprocessor import Preprocessor\n",
+    "\n",
+    "pp = Preprocessor()\n",
+    "\n",
+    "column_names = [\"patient_id\", \"clump_thickness\", \"size_uniformity\", \"shape_uniformity\", \"marginal_adhesion\", \"epithelial_size\", \"bare_nuclei\", \"bland_chromatin\", \"normal_nucleoli\", \"mitosis\", \"class\"]\n",
+    "\n",
+    "pp.load_data(\"./data/breast-cancer-wisconsin.data\", column_names=column_names, response_name=\"class\", na_values=[\"?\"])\n",
+    "\n",
+    "# Remove the patient_id column which contribute no valuable information\n",
+    "pp.drop_columns(\"patient_id\")\n",
+    "\n",
+    "# Remove any rows with missing samples\n",
+    "pp.drop_na()\n",
+    "\n",
+    "# Standard normalize the data\n",
+    "# pp.normalize()\n",
+    "\n",
+    "pp.data\n",
+    "pp.response\n",
+    "# print(pp.normalized_data)"
+   ],
    "metadata": {
     "collapsed": false
    }
