--- a/Experiment.ipynb
+++ b/Experiment.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "source": [
     "# Experiment Implementation\n",
+    "Authors: Tanis Hadwin, Jacob Clostio, Tyler Koon, and Chris Vazquez\n",
     "\n",
-    "To consider how the KMeans++ and Hart Wong KMeans algorithms compare with traditional KMeans, we devised a simple experiment that compares the mean F-1 Score across a range of different testing conditions. For more detail on the experimental design and underlying research questions, please see the accompanying project report."
+    "To consider how the KMeans++ and Hartigan Wong KMeans algorithms compare with traditional KMeans, we devised a simple experiment that compares the mean F1 Score across a range of different testing conditions. For more detail on the experimental design and underlying research questions, please see the accompanying project report."
    ],
    "metadata": {
     "collapsed": false
@@ -47,6 +48,7 @@
    "outputs": [],
    "source": [
     "### Load and Preprocess Data ###\n",
+    "\n",
     "pp = Preprocessor()\n",
     "\n",
     "column_names = [\"patient_id\", \"clump_thickness\", \"size_uniformity\", \"shape_uniformity\", \"marginal_adhesion\", \"epithelial_size\", \"bare_nuclei\", \"bland_chromatin\", \"normal_nucleoli\", \"mitosis\", \"class\"]\n",
@@ -94,7 +96,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Following this dimensionality reduction, we generated a set of elbow plots for each of the three KMeans implementations in question. We considered a small range of k values between 1 and 10, and found that all three models tended to produce similar inertia values for each of these values. That said, the Hart Wong KMeans method did deviate from the KMeans and KMeans++ methods, especially around k = 4. Although we are not sure why this deviance begins around k = 4 (perhaps this is just an artifact of the underlying data), the deviance itself is not unexpected; the Hart Wong method implements additional changes to the frequency with which clusters are updated, unlike the KMeans and KMeans++ methods. Nonetheless, these elbow plots show that the change in inertia begins to decrease around k = 3, suggesting that 3 clusters is most optimal for these data. Based on this insight, we have decided to consider a range of k values between 1 and 6 for our experiment. Our hope is that by exploring this range of values, we can gain insight into how each of the three methods perform in both optimal and non-optimal clustering conditions."
+    "Following this dimensionality reduction, we generated a set of elbow plots for each of the three KMeans implementations in question. We considered a small range of k values between 1 and 10, and found that all three models tended to produce similar inertia values for each of these values. That said, the Hartigan Wong KMeans method did deviate from the KMeans and KMeans++ methods, especially around k = 4. Although we are not sure why this deviance begins around k = 4 (perhaps this is just an artifact of the underlying data), the deviance itself is not unexpected; the Hartigan Wong method implements additional changes to the frequency with which clusters are updated, unlike the KMeans and KMeans++ methods. Nonetheless, these elbow plots show that the change in inertia begins to decrease around k = 3, suggesting that 3 clusters is most optimal for these data. Based on this insight, we have decided to consider a range of k values between 1 and 6 for our experiment. Our hope is that by exploring this range of values, we can gain insight into how each of the three methods perform in both optimal and non-optimal clustering conditions."
    ],
    "metadata": {
     "collapsed": false
@@ -182,7 +184,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "With these initial investigations complete, we now implement our experiment. As previously suggested, this involves comparing the mean F1 scores for each method across a range of K values. We decided to use the F1 score to compare performance due to the standardized nature of the score, which offers an easily comparative scale. Additionally, using the F1 score offers a balanced overview of recall and precision of each method, serving to provide a more holistic overview of model performance."
+    "With these initial investigations complete, we now implement our experiment. As previously suggested, this involves comparing the mean F1 scores for each method across a range of k values. We decided to use the F1 score to compare performance due to the standardized nature of the score, which offers an easily comparative scale. Additionally, using the F1 score offers a balanced overview of recall and precision of each method, serving to provide a more holistic overview of model performance."
    ],
    "metadata": {
     "collapsed": false
@@ -319,7 +321,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "exploring the resulting performance of these methods presents some interesting behavior. Perhaps most notably, the KMeans++ method appears to be much more resistant to non-optimal values of k. This is demonstrated by a much higher mean F1 score across values of k than the competing methods. We believe this resistance to be an artifact of the more intelligent centroid initialization process in the KMeans++ algorithm, which ensures that centroids are more equitably distributed throughout the feature space. This resistance might make KMeans++ a great method to use in situations where there is little a-priori knowledge on the expected number of clusters in the data. For more optimal values of k, the Hartigan Wong method offered similar performance, slightly out-performing the traditional KMeans algorithm. That said, this performance advantage quickly decays as the number of clusters becomes less optimal, effective converging to the same performance as KMeans."
+    "Exploring the resulting performance of these methods presents some interesting behavior. Perhaps most notably, the KMeans++ method appears to be much more resistant to non-optimal values of k. This is demonstrated by a much higher mean F1 score across values of k than the competing methods. We believe this resistance to be an artifact of the more intelligent centroid initialization process in the KMeans++ algorithm, which ensures that centroids are more equitably distributed throughout the feature space. This resistance might make KMeans++ a great method to use in situations where there is little a-priori knowledge on the expected number of clusters in the data. For more optimal values of k, the Hartigan Wong method offered similar performance, slightly out-performing the traditional KMeans algorithm. That said, this performance advantage quickly decays as the number of clusters becomes less optimal, effective converging to the same performance as KMeans."
    ],
    "metadata": {
     "collapsed": false
@@ -437,7 +439,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Finally, we consider differences in the clustering behavior of these three methods across the range of selected k values. For the most part, the KMeans and KMeans++ algorithms tend to produce very similar cluster assignment. Given that the underlying clustering process for these two algorithms is identical, these results were to be expected. That said, for higher values of k the KMeans++ algorithm tended  to produce slightly larger clusters, indicating that it might be better at preventing multiple centroids from converging to the same local minima. Once again, this supports our previous observations and demonstrates the resistance of KMeans++ to less-optimal clustering situations. On the other hand, the Hartigan Wong KMeans method performed similarly to KMeans++ for higher values of k, however it appeared to be much worse at dealing with differences in cluster density, especially for lower values of k. Though we are uncertain of why this behavior occurs, we believe it to be caused by the more frequent updating of centroids from this implementation, which might impact the centroid convergence patterns. "
+    "Finally, we consider differences in the clustering behavior of these three methods across the range of selected k values. For the most part, the KMeans and KMeans++ algorithms tend to produce very similar cluster assignment. Given that the underlying clustering process for these two algorithms is identical, these results were to be expected. That said, for higher values of k the KMeans++ algorithm tended  to produce slightly larger clusters, indicating that it might be better at preventing multiple centroids from converging to the same local minima. Once again, this supports our previous observations and demonstrates the resistance of KMeans++ to less-optimal clustering situations. On the other hand, the Hartigan Wong KMeans method performed similarly to KMeans++ for higher values of k, however it appeared to be much worse at dealing with differences in cluster density, especially for lower values of k. Though we are uncertain of why this behavior occurs, we believe it to be caused by the more frequent updating of centroids from this implementation, which might impact the centroid convergence patterns."
    ],
    "metadata": {
     "collapsed": false
